parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ILA_IFX
    UMINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> external_list
Rule 2     external_list -> external external_list
Rule 3     external_list -> empty
Rule 4     external -> function_def
Rule 5     external -> statement
Rule 6     function_def -> TYPE ID LPAREN param_list RPAREN compound
Rule 7     param_list -> param_list_nonempty
Rule 8     param_list -> empty
Rule 9     param_list_nonempty -> TYPE ID
Rule 10    param_list_nonempty -> TYPE ID COMMA param_list_nonempty
Rule 11    compound -> LBRACE stmt_list RBRACE
Rule 12    stmt_list -> stmt_list statement
Rule 13    stmt_list -> empty
Rule 14    statement -> declaration_stmt
Rule 15    statement -> expression_stmt
Rule 16    statement -> if_stmt
Rule 17    statement -> while_stmt
Rule 18    statement -> for_stmt
Rule 19    statement -> return_stmt
Rule 20    statement -> break_stmt
Rule 21    statement -> continue_stmt
Rule 22    statement -> compound
Rule 23    declaration_stmt -> TYPE ID SEMI
Rule 24    declaration_stmt -> TYPE ID ASSIGN expression SEMI
Rule 25    expression_stmt -> expression SEMI
Rule 26    expression -> assignment
Rule 27    expression -> binary_expr
Rule 28    assignment -> ID ASSIGN expression
Rule 29    binary_expr -> binary_expr PLUS binary_expr
Rule 30    binary_expr -> binary_expr MINUS binary_expr
Rule 31    binary_expr -> binary_expr TIMES binary_expr
Rule 32    binary_expr -> binary_expr DIVIDE binary_expr
Rule 33    binary_expr -> binary_expr OU binary_expr
Rule 34    binary_expr -> binary_expr AWLA_LOGICAL binary_expr
Rule 35    binary_expr -> binary_expr LT binary_expr
Rule 36    binary_expr -> binary_expr LE binary_expr
Rule 37    binary_expr -> binary_expr GT binary_expr
Rule 38    binary_expr -> binary_expr GE binary_expr
Rule 39    binary_expr -> binary_expr EQ binary_expr
Rule 40    binary_expr -> binary_expr NE binary_expr
Rule 41    binary_expr -> MINUS binary_expr
Rule 42    binary_expr -> MACHI binary_expr
Rule 43    binary_expr -> LPAREN expression RPAREN
Rule 44    binary_expr -> NUMBER
Rule 45    binary_expr -> STRING
Rule 46    binary_expr -> BOOL
Rule 47    binary_expr -> NULL
Rule 48    binary_expr -> ID
Rule 49    binary_expr -> func_call
Rule 50    func_call -> ID LPAREN arg_list RPAREN
Rule 51    arg_list -> arg_list_nonempty
Rule 52    arg_list -> empty
Rule 53    arg_list_nonempty -> expression
Rule 54    arg_list_nonempty -> expression COMMA arg_list_nonempty
Rule 55    if_stmt -> ILA LPAREN expression RPAREN statement AWLA statement
Rule 56    if_stmt -> ILA LPAREN expression RPAREN statement
Rule 57    while_stmt -> MNINTCHOUF LPAREN expression RPAREN statement
Rule 58    for_stmt -> KOULLA LPAREN opt_expr SEMI opt_expr SEMI opt_expr RPAREN statement
Rule 59    opt_expr -> expression
Rule 60    opt_expr -> empty
Rule 61    break_stmt -> HRASS SEMI
Rule 62    continue_stmt -> KML SEMI
Rule 63    return_stmt -> RJ3 opt_expr SEMI
Rule 64    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 24 28
AWLA                 : 55
AWLA_LOGICAL         : 34
BOOL                 : 46
COMMA                : 10 54
DIVIDE               : 32
EQ                   : 39
GE                   : 38
GT                   : 37
HRASS                : 61
ID                   : 6 9 10 23 24 28 48 50
ILA                  : 55 56
ILA_IFX              : 
KML                  : 62
KOULLA               : 58
LBRACE               : 11
LE                   : 36
LPAREN               : 6 43 50 55 56 57 58
LT                   : 35
MACHI                : 42
MINUS                : 30 41
MNINTCHOUF           : 57
NE                   : 40
NULL                 : 47
NUMBER               : 44
OU                   : 33
PLUS                 : 29
RBRACE               : 11
RJ3                  : 63
RPAREN               : 6 43 50 55 56 57 58
SEMI                 : 23 24 25 58 58 61 62 63
STRING               : 45
TIMES                : 31
TYPE                 : 6 9 10 23 24
UMINUS               : 
error                : 

Nonterminals, with rules where they appear

arg_list             : 50
arg_list_nonempty    : 51 54
assignment           : 26
binary_expr          : 27 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42
break_stmt           : 20
compound             : 6 22
continue_stmt        : 21
declaration_stmt     : 14
empty                : 3 8 13 52 60
expression           : 24 25 28 43 53 54 55 56 57 59
expression_stmt      : 15
external             : 2
external_list        : 1 2
for_stmt             : 18
func_call            : 49
function_def         : 4
if_stmt              : 16
opt_expr             : 58 58 58 63
param_list           : 6
param_list_nonempty  : 7 10
program              : 0
return_stmt          : 19
statement            : 5 12 55 55 56 57 58
stmt_list            : 11 12
while_stmt           : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_list
    (2) external_list -> . external external_list
    (3) external_list -> . empty
    (4) external -> . function_def
    (5) external -> . statement
    (64) empty -> .
    (6) function_def -> . TYPE ID LPAREN param_list RPAREN compound
    (14) statement -> . declaration_stmt
    (15) statement -> . expression_stmt
    (16) statement -> . if_stmt
    (17) statement -> . while_stmt
    (18) statement -> . for_stmt
    (19) statement -> . return_stmt
    (20) statement -> . break_stmt
    (21) statement -> . continue_stmt
    (22) statement -> . compound
    (23) declaration_stmt -> . TYPE ID SEMI
    (24) declaration_stmt -> . TYPE ID ASSIGN expression SEMI
    (25) expression_stmt -> . expression SEMI
    (55) if_stmt -> . ILA LPAREN expression RPAREN statement AWLA statement
    (56) if_stmt -> . ILA LPAREN expression RPAREN statement
    (57) while_stmt -> . MNINTCHOUF LPAREN expression RPAREN statement
    (58) for_stmt -> . KOULLA LPAREN opt_expr SEMI opt_expr SEMI opt_expr RPAREN statement
    (63) return_stmt -> . RJ3 opt_expr SEMI
    (61) break_stmt -> . HRASS SEMI
    (62) continue_stmt -> . KML SEMI
    (11) compound -> . LBRACE stmt_list RBRACE
    (26) expression -> . assignment
    (27) expression -> . binary_expr
    (28) assignment -> . ID ASSIGN expression
    (29) binary_expr -> . binary_expr PLUS binary_expr
    (30) binary_expr -> . binary_expr MINUS binary_expr
    (31) binary_expr -> . binary_expr TIMES binary_expr
    (32) binary_expr -> . binary_expr DIVIDE binary_expr
    (33) binary_expr -> . binary_expr OU binary_expr
    (34) binary_expr -> . binary_expr AWLA_LOGICAL binary_expr
    (35) binary_expr -> . binary_expr LT binary_expr
    (36) binary_expr -> . binary_expr LE binary_expr
    (37) binary_expr -> . binary_expr GT binary_expr
    (38) binary_expr -> . binary_expr GE binary_expr
    (39) binary_expr -> . binary_expr EQ binary_expr
    (40) binary_expr -> . binary_expr NE binary_expr
    (41) binary_expr -> . MINUS binary_expr
    (42) binary_expr -> . MACHI binary_expr
    (43) binary_expr -> . LPAREN expression RPAREN
    (44) binary_expr -> . NUMBER
    (45) binary_expr -> . STRING
    (46) binary_expr -> . BOOL
    (47) binary_expr -> . NULL
    (48) binary_expr -> . ID
    (49) binary_expr -> . func_call
    (50) func_call -> . ID LPAREN arg_list RPAREN

    $end            reduce using rule 64 (empty -> .)
    TYPE            shift and go to state 7
    ILA             shift and go to state 20
    MNINTCHOUF      shift and go to state 21
    KOULLA          shift and go to state 22
    RJ3             shift and go to state 23
    HRASS           shift and go to state 24
    KML             shift and go to state 25
    LBRACE          shift and go to state 26
    ID              shift and go to state 8
    MINUS           shift and go to state 29
    MACHI           shift and go to state 30
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOL            shift and go to state 33
    NULL            shift and go to state 34

    program                        shift and go to state 1
    external_list                  shift and go to state 2
    external                       shift and go to state 3
    empty                          shift and go to state 4
    function_def                   shift and go to state 5
    statement                      shift and go to state 6
    compound                       shift and go to state 10
    declaration_stmt               shift and go to state 11
    expression_stmt                shift and go to state 12
    if_stmt                        shift and go to state 13
    while_stmt                     shift and go to state 14
    for_stmt                       shift and go to state 15
    return_stmt                    shift and go to state 16
    break_stmt                     shift and go to state 17
    continue_stmt                  shift and go to state 18
    expression                     shift and go to state 19
    assignment                     shift and go to state 27
    binary_expr                    shift and go to state 28
    func_call                      shift and go to state 35

state 1

    (0) S' -> program .



state 2

    (1) program -> external_list .

    $end            reduce using rule 1 (program -> external_list .)


state 3

    (2) external_list -> external . external_list
    (2) external_list -> . external external_list
    (3) external_list -> . empty
    (4) external -> . function_def
    (5) external -> . statement
    (64) empty -> .
    (6) function_def -> . TYPE ID LPAREN param_list RPAREN compound
    (14) statement -> . declaration_stmt
    (15) statement -> . expression_stmt
    (16) statement -> . if_stmt
    (17) statement -> . while_stmt
    (18) statement -> . for_stmt
    (19) statement -> . return_stmt
    (20) statement -> . break_stmt
    (21) statement -> . continue_stmt
    (22) statement -> . compound
    (23) declaration_stmt -> . TYPE ID SEMI
    (24) declaration_stmt -> . TYPE ID ASSIGN expression SEMI
    (25) expression_stmt -> . expression SEMI
    (55) if_stmt -> . ILA LPAREN expression RPAREN statement AWLA statement
    (56) if_stmt -> . ILA LPAREN expression RPAREN statement
    (57) while_stmt -> . MNINTCHOUF LPAREN expression RPAREN statement
    (58) for_stmt -> . KOULLA LPAREN opt_expr SEMI opt_expr SEMI opt_expr RPAREN statement
    (63) return_stmt -> . RJ3 opt_expr SEMI
    (61) break_stmt -> . HRASS SEMI
    (62) continue_stmt -> . KML SEMI
    (11) compound -> . LBRACE stmt_list RBRACE
    (26) expression -> . assignment
    (27) expression -> . binary_expr
    (28) assignment -> . ID ASSIGN expression
    (29) binary_expr -> . binary_expr PLUS binary_expr
    (30) binary_expr -> . binary_expr MINUS binary_expr
    (31) binary_expr -> . binary_expr TIMES binary_expr
    (32) binary_expr -> . binary_expr DIVIDE binary_expr
    (33) binary_expr -> . binary_expr OU binary_expr
    (34) binary_expr -> . binary_expr AWLA_LOGICAL binary_expr
    (35) binary_expr -> . binary_expr LT binary_expr
    (36) binary_expr -> . binary_expr LE binary_expr
    (37) binary_expr -> . binary_expr GT binary_expr
    (38) binary_expr -> . binary_expr GE binary_expr
    (39) binary_expr -> . binary_expr EQ binary_expr
    (40) binary_expr -> . binary_expr NE binary_expr
    (41) binary_expr -> . MINUS binary_expr
    (42) binary_expr -> . MACHI binary_expr
    (43) binary_expr -> . LPAREN expression RPAREN
    (44) binary_expr -> . NUMBER
    (45) binary_expr -> . STRING
    (46) binary_expr -> . BOOL
    (47) binary_expr -> . NULL
    (48) binary_expr -> . ID
    (49) binary_expr -> . func_call
    (50) func_call -> . ID LPAREN arg_list RPAREN

    $end            reduce using rule 64 (empty -> .)
    TYPE            shift and go to state 7
    ILA             shift and go to state 20
    MNINTCHOUF      shift and go to state 21
    KOULLA          shift and go to state 22
    RJ3             shift and go to state 23
    HRASS           shift and go to state 24
    KML             shift and go to state 25
    LBRACE          shift and go to state 26
    ID              shift and go to state 8
    MINUS           shift and go to state 29
    MACHI           shift and go to state 30
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOL            shift and go to state 33
    NULL            shift and go to state 34

    external                       shift and go to state 3
    external_list                  shift and go to state 36
    empty                          shift and go to state 4
    function_def                   shift and go to state 5
    statement                      shift and go to state 6
    compound                       shift and go to state 10
    declaration_stmt               shift and go to state 11
    expression_stmt                shift and go to state 12
    if_stmt                        shift and go to state 13
    while_stmt                     shift and go to state 14
    for_stmt                       shift and go to state 15
    return_stmt                    shift and go to state 16
    break_stmt                     shift and go to state 17
    continue_stmt                  shift and go to state 18
    expression                     shift and go to state 19
    assignment                     shift and go to state 27
    binary_expr                    shift and go to state 28
    func_call                      shift and go to state 35

state 4

    (3) external_list -> empty .

    $end            reduce using rule 3 (external_list -> empty .)


state 5

    (4) external -> function_def .

    TYPE            reduce using rule 4 (external -> function_def .)
    ILA             reduce using rule 4 (external -> function_def .)
    MNINTCHOUF      reduce using rule 4 (external -> function_def .)
    KOULLA          reduce using rule 4 (external -> function_def .)
    RJ3             reduce using rule 4 (external -> function_def .)
    HRASS           reduce using rule 4 (external -> function_def .)
    KML             reduce using rule 4 (external -> function_def .)
    LBRACE          reduce using rule 4 (external -> function_def .)
    ID              reduce using rule 4 (external -> function_def .)
    MINUS           reduce using rule 4 (external -> function_def .)
    MACHI           reduce using rule 4 (external -> function_def .)
    LPAREN          reduce using rule 4 (external -> function_def .)
    NUMBER          reduce using rule 4 (external -> function_def .)
    STRING          reduce using rule 4 (external -> function_def .)
    BOOL            reduce using rule 4 (external -> function_def .)
    NULL            reduce using rule 4 (external -> function_def .)
    $end            reduce using rule 4 (external -> function_def .)


state 6

    (5) external -> statement .

    TYPE            reduce using rule 5 (external -> statement .)
    ILA             reduce using rule 5 (external -> statement .)
    MNINTCHOUF      reduce using rule 5 (external -> statement .)
    KOULLA          reduce using rule 5 (external -> statement .)
    RJ3             reduce using rule 5 (external -> statement .)
    HRASS           reduce using rule 5 (external -> statement .)
    KML             reduce using rule 5 (external -> statement .)
    LBRACE          reduce using rule 5 (external -> statement .)
    ID              reduce using rule 5 (external -> statement .)
    MINUS           reduce using rule 5 (external -> statement .)
    MACHI           reduce using rule 5 (external -> statement .)
    LPAREN          reduce using rule 5 (external -> statement .)
    NUMBER          reduce using rule 5 (external -> statement .)
    STRING          reduce using rule 5 (external -> statement .)
    BOOL            reduce using rule 5 (external -> statement .)
    NULL            reduce using rule 5 (external -> statement .)
    $end            reduce using rule 5 (external -> statement .)


state 7

    (6) function_def -> TYPE . ID LPAREN param_list RPAREN compound
    (23) declaration_stmt -> TYPE . ID SEMI
    (24) declaration_stmt -> TYPE . ID ASSIGN expression SEMI

    ID              shift and go to state 37


state 8

    (28) assignment -> ID . ASSIGN expression
    (48) binary_expr -> ID .
    (50) func_call -> ID . LPAREN arg_list RPAREN

    ASSIGN          shift and go to state 38
    PLUS            reduce using rule 48 (binary_expr -> ID .)
    MINUS           reduce using rule 48 (binary_expr -> ID .)
    TIMES           reduce using rule 48 (binary_expr -> ID .)
    DIVIDE          reduce using rule 48 (binary_expr -> ID .)
    OU              reduce using rule 48 (binary_expr -> ID .)
    AWLA_LOGICAL    reduce using rule 48 (binary_expr -> ID .)
    LT              reduce using rule 48 (binary_expr -> ID .)
    LE              reduce using rule 48 (binary_expr -> ID .)
    GT              reduce using rule 48 (binary_expr -> ID .)
    GE              reduce using rule 48 (binary_expr -> ID .)
    EQ              reduce using rule 48 (binary_expr -> ID .)
    NE              reduce using rule 48 (binary_expr -> ID .)
    SEMI            reduce using rule 48 (binary_expr -> ID .)
    RPAREN          reduce using rule 48 (binary_expr -> ID .)
    COMMA           reduce using rule 48 (binary_expr -> ID .)
    LPAREN          shift and go to state 39


state 9

    (43) binary_expr -> LPAREN . expression RPAREN
    (26) expression -> . assignment
    (27) expression -> . binary_expr
    (28) assignment -> . ID ASSIGN expression
    (29) binary_expr -> . binary_expr PLUS binary_expr
    (30) binary_expr -> . binary_expr MINUS binary_expr
    (31) binary_expr -> . binary_expr TIMES binary_expr
    (32) binary_expr -> . binary_expr DIVIDE binary_expr
    (33) binary_expr -> . binary_expr OU binary_expr
    (34) binary_expr -> . binary_expr AWLA_LOGICAL binary_expr
    (35) binary_expr -> . binary_expr LT binary_expr
    (36) binary_expr -> . binary_expr LE binary_expr
    (37) binary_expr -> . binary_expr GT binary_expr
    (38) binary_expr -> . binary_expr GE binary_expr
    (39) binary_expr -> . binary_expr EQ binary_expr
    (40) binary_expr -> . binary_expr NE binary_expr
    (41) binary_expr -> . MINUS binary_expr
    (42) binary_expr -> . MACHI binary_expr
    (43) binary_expr -> . LPAREN expression RPAREN
    (44) binary_expr -> . NUMBER
    (45) binary_expr -> . STRING
    (46) binary_expr -> . BOOL
    (47) binary_expr -> . NULL
    (48) binary_expr -> . ID
    (49) binary_expr -> . func_call
    (50) func_call -> . ID LPAREN arg_list RPAREN

    ID              shift and go to state 8
    MINUS           shift and go to state 29
    MACHI           shift and go to state 30
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOL            shift and go to state 33
    NULL            shift and go to state 34

    expression                     shift and go to state 40
    assignment                     shift and go to state 27
    binary_expr                    shift and go to state 28
    func_call                      shift and go to state 35

state 10

    (22) statement -> compound .

    TYPE            reduce using rule 22 (statement -> compound .)
    ILA             reduce using rule 22 (statement -> compound .)
    MNINTCHOUF      reduce using rule 22 (statement -> compound .)
    KOULLA          reduce using rule 22 (statement -> compound .)
    RJ3             reduce using rule 22 (statement -> compound .)
    HRASS           reduce using rule 22 (statement -> compound .)
    KML             reduce using rule 22 (statement -> compound .)
    LBRACE          reduce using rule 22 (statement -> compound .)
    ID              reduce using rule 22 (statement -> compound .)
    MINUS           reduce using rule 22 (statement -> compound .)
    MACHI           reduce using rule 22 (statement -> compound .)
    LPAREN          reduce using rule 22 (statement -> compound .)
    NUMBER          reduce using rule 22 (statement -> compound .)
    STRING          reduce using rule 22 (statement -> compound .)
    BOOL            reduce using rule 22 (statement -> compound .)
    NULL            reduce using rule 22 (statement -> compound .)
    $end            reduce using rule 22 (statement -> compound .)
    RBRACE          reduce using rule 22 (statement -> compound .)
    AWLA            reduce using rule 22 (statement -> compound .)


state 11

    (14) statement -> declaration_stmt .

    TYPE            reduce using rule 14 (statement -> declaration_stmt .)
    ILA             reduce using rule 14 (statement -> declaration_stmt .)
    MNINTCHOUF      reduce using rule 14 (statement -> declaration_stmt .)
    KOULLA          reduce using rule 14 (statement -> declaration_stmt .)
    RJ3             reduce using rule 14 (statement -> declaration_stmt .)
    HRASS           reduce using rule 14 (statement -> declaration_stmt .)
    KML             reduce using rule 14 (statement -> declaration_stmt .)
    LBRACE          reduce using rule 14 (statement -> declaration_stmt .)
    ID              reduce using rule 14 (statement -> declaration_stmt .)
    MINUS           reduce using rule 14 (statement -> declaration_stmt .)
    MACHI           reduce using rule 14 (statement -> declaration_stmt .)
    LPAREN          reduce using rule 14 (statement -> declaration_stmt .)
    NUMBER          reduce using rule 14 (statement -> declaration_stmt .)
    STRING          reduce using rule 14 (statement -> declaration_stmt .)
    BOOL            reduce using rule 14 (statement -> declaration_stmt .)
    NULL            reduce using rule 14 (statement -> declaration_stmt .)
    $end            reduce using rule 14 (statement -> declaration_stmt .)
    RBRACE          reduce using rule 14 (statement -> declaration_stmt .)
    AWLA            reduce using rule 14 (statement -> declaration_stmt .)


state 12

    (15) statement -> expression_stmt .

    TYPE            reduce using rule 15 (statement -> expression_stmt .)
    ILA             reduce using rule 15 (statement -> expression_stmt .)
    MNINTCHOUF      reduce using rule 15 (statement -> expression_stmt .)
    KOULLA          reduce using rule 15 (statement -> expression_stmt .)
    RJ3             reduce using rule 15 (statement -> expression_stmt .)
    HRASS           reduce using rule 15 (statement -> expression_stmt .)
    KML             reduce using rule 15 (statement -> expression_stmt .)
    LBRACE          reduce using rule 15 (statement -> expression_stmt .)
    ID              reduce using rule 15 (statement -> expression_stmt .)
    MINUS           reduce using rule 15 (statement -> expression_stmt .)
    MACHI           reduce using rule 15 (statement -> expression_stmt .)
    LPAREN          reduce using rule 15 (statement -> expression_stmt .)
    NUMBER          reduce using rule 15 (statement -> expression_stmt .)
    STRING          reduce using rule 15 (statement -> expression_stmt .)
    BOOL            reduce using rule 15 (statement -> expression_stmt .)
    NULL            reduce using rule 15 (statement -> expression_stmt .)
    $end            reduce using rule 15 (statement -> expression_stmt .)
    RBRACE          reduce using rule 15 (statement -> expression_stmt .)
    AWLA            reduce using rule 15 (statement -> expression_stmt .)


state 13

    (16) statement -> if_stmt .

    TYPE            reduce using rule 16 (statement -> if_stmt .)
    ILA             reduce using rule 16 (statement -> if_stmt .)
    MNINTCHOUF      reduce using rule 16 (statement -> if_stmt .)
    KOULLA          reduce using rule 16 (statement -> if_stmt .)
    RJ3             reduce using rule 16 (statement -> if_stmt .)
    HRASS           reduce using rule 16 (statement -> if_stmt .)
    KML             reduce using rule 16 (statement -> if_stmt .)
    LBRACE          reduce using rule 16 (statement -> if_stmt .)
    ID              reduce using rule 16 (statement -> if_stmt .)
    MINUS           reduce using rule 16 (statement -> if_stmt .)
    MACHI           reduce using rule 16 (statement -> if_stmt .)
    LPAREN          reduce using rule 16 (statement -> if_stmt .)
    NUMBER          reduce using rule 16 (statement -> if_stmt .)
    STRING          reduce using rule 16 (statement -> if_stmt .)
    BOOL            reduce using rule 16 (statement -> if_stmt .)
    NULL            reduce using rule 16 (statement -> if_stmt .)
    $end            reduce using rule 16 (statement -> if_stmt .)
    RBRACE          reduce using rule 16 (statement -> if_stmt .)
    AWLA            reduce using rule 16 (statement -> if_stmt .)


state 14

    (17) statement -> while_stmt .

    TYPE            reduce using rule 17 (statement -> while_stmt .)
    ILA             reduce using rule 17 (statement -> while_stmt .)
    MNINTCHOUF      reduce using rule 17 (statement -> while_stmt .)
    KOULLA          reduce using rule 17 (statement -> while_stmt .)
    RJ3             reduce using rule 17 (statement -> while_stmt .)
    HRASS           reduce using rule 17 (statement -> while_stmt .)
    KML             reduce using rule 17 (statement -> while_stmt .)
    LBRACE          reduce using rule 17 (statement -> while_stmt .)
    ID              reduce using rule 17 (statement -> while_stmt .)
    MINUS           reduce using rule 17 (statement -> while_stmt .)
    MACHI           reduce using rule 17 (statement -> while_stmt .)
    LPAREN          reduce using rule 17 (statement -> while_stmt .)
    NUMBER          reduce using rule 17 (statement -> while_stmt .)
    STRING          reduce using rule 17 (statement -> while_stmt .)
    BOOL            reduce using rule 17 (statement -> while_stmt .)
    NULL            reduce using rule 17 (statement -> while_stmt .)
    $end            reduce using rule 17 (statement -> while_stmt .)
    RBRACE          reduce using rule 17 (statement -> while_stmt .)
    AWLA            reduce using rule 17 (statement -> while_stmt .)


state 15

    (18) statement -> for_stmt .

    TYPE            reduce using rule 18 (statement -> for_stmt .)
    ILA             reduce using rule 18 (statement -> for_stmt .)
    MNINTCHOUF      reduce using rule 18 (statement -> for_stmt .)
    KOULLA          reduce using rule 18 (statement -> for_stmt .)
    RJ3             reduce using rule 18 (statement -> for_stmt .)
    HRASS           reduce using rule 18 (statement -> for_stmt .)
    KML             reduce using rule 18 (statement -> for_stmt .)
    LBRACE          reduce using rule 18 (statement -> for_stmt .)
    ID              reduce using rule 18 (statement -> for_stmt .)
    MINUS           reduce using rule 18 (statement -> for_stmt .)
    MACHI           reduce using rule 18 (statement -> for_stmt .)
    LPAREN          reduce using rule 18 (statement -> for_stmt .)
    NUMBER          reduce using rule 18 (statement -> for_stmt .)
    STRING          reduce using rule 18 (statement -> for_stmt .)
    BOOL            reduce using rule 18 (statement -> for_stmt .)
    NULL            reduce using rule 18 (statement -> for_stmt .)
    $end            reduce using rule 18 (statement -> for_stmt .)
    RBRACE          reduce using rule 18 (statement -> for_stmt .)
    AWLA            reduce using rule 18 (statement -> for_stmt .)


state 16

    (19) statement -> return_stmt .

    TYPE            reduce using rule 19 (statement -> return_stmt .)
    ILA             reduce using rule 19 (statement -> return_stmt .)
    MNINTCHOUF      reduce using rule 19 (statement -> return_stmt .)
    KOULLA          reduce using rule 19 (statement -> return_stmt .)
    RJ3             reduce using rule 19 (statement -> return_stmt .)
    HRASS           reduce using rule 19 (statement -> return_stmt .)
    KML             reduce using rule 19 (statement -> return_stmt .)
    LBRACE          reduce using rule 19 (statement -> return_stmt .)
    ID              reduce using rule 19 (statement -> return_stmt .)
    MINUS           reduce using rule 19 (statement -> return_stmt .)
    MACHI           reduce using rule 19 (statement -> return_stmt .)
    LPAREN          reduce using rule 19 (statement -> return_stmt .)
    NUMBER          reduce using rule 19 (statement -> return_stmt .)
    STRING          reduce using rule 19 (statement -> return_stmt .)
    BOOL            reduce using rule 19 (statement -> return_stmt .)
    NULL            reduce using rule 19 (statement -> return_stmt .)
    $end            reduce using rule 19 (statement -> return_stmt .)
    RBRACE          reduce using rule 19 (statement -> return_stmt .)
    AWLA            reduce using rule 19 (statement -> return_stmt .)


state 17

    (20) statement -> break_stmt .

    TYPE            reduce using rule 20 (statement -> break_stmt .)
    ILA             reduce using rule 20 (statement -> break_stmt .)
    MNINTCHOUF      reduce using rule 20 (statement -> break_stmt .)
    KOULLA          reduce using rule 20 (statement -> break_stmt .)
    RJ3             reduce using rule 20 (statement -> break_stmt .)
    HRASS           reduce using rule 20 (statement -> break_stmt .)
    KML             reduce using rule 20 (statement -> break_stmt .)
    LBRACE          reduce using rule 20 (statement -> break_stmt .)
    ID              reduce using rule 20 (statement -> break_stmt .)
    MINUS           reduce using rule 20 (statement -> break_stmt .)
    MACHI           reduce using rule 20 (statement -> break_stmt .)
    LPAREN          reduce using rule 20 (statement -> break_stmt .)
    NUMBER          reduce using rule 20 (statement -> break_stmt .)
    STRING          reduce using rule 20 (statement -> break_stmt .)
    BOOL            reduce using rule 20 (statement -> break_stmt .)
    NULL            reduce using rule 20 (statement -> break_stmt .)
    $end            reduce using rule 20 (statement -> break_stmt .)
    RBRACE          reduce using rule 20 (statement -> break_stmt .)
    AWLA            reduce using rule 20 (statement -> break_stmt .)


state 18

    (21) statement -> continue_stmt .

    TYPE            reduce using rule 21 (statement -> continue_stmt .)
    ILA             reduce using rule 21 (statement -> continue_stmt .)
    MNINTCHOUF      reduce using rule 21 (statement -> continue_stmt .)
    KOULLA          reduce using rule 21 (statement -> continue_stmt .)
    RJ3             reduce using rule 21 (statement -> continue_stmt .)
    HRASS           reduce using rule 21 (statement -> continue_stmt .)
    KML             reduce using rule 21 (statement -> continue_stmt .)
    LBRACE          reduce using rule 21 (statement -> continue_stmt .)
    ID              reduce using rule 21 (statement -> continue_stmt .)
    MINUS           reduce using rule 21 (statement -> continue_stmt .)
    MACHI           reduce using rule 21 (statement -> continue_stmt .)
    LPAREN          reduce using rule 21 (statement -> continue_stmt .)
    NUMBER          reduce using rule 21 (statement -> continue_stmt .)
    STRING          reduce using rule 21 (statement -> continue_stmt .)
    BOOL            reduce using rule 21 (statement -> continue_stmt .)
    NULL            reduce using rule 21 (statement -> continue_stmt .)
    $end            reduce using rule 21 (statement -> continue_stmt .)
    RBRACE          reduce using rule 21 (statement -> continue_stmt .)
    AWLA            reduce using rule 21 (statement -> continue_stmt .)


state 19

    (25) expression_stmt -> expression . SEMI

    SEMI            shift and go to state 41


state 20

    (55) if_stmt -> ILA . LPAREN expression RPAREN statement AWLA statement
    (56) if_stmt -> ILA . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 42


state 21

    (57) while_stmt -> MNINTCHOUF . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 43


state 22

    (58) for_stmt -> KOULLA . LPAREN opt_expr SEMI opt_expr SEMI opt_expr RPAREN statement

    LPAREN          shift and go to state 44


state 23

    (63) return_stmt -> RJ3 . opt_expr SEMI
    (59) opt_expr -> . expression
    (60) opt_expr -> . empty
    (26) expression -> . assignment
    (27) expression -> . binary_expr
    (64) empty -> .
    (28) assignment -> . ID ASSIGN expression
    (29) binary_expr -> . binary_expr PLUS binary_expr
    (30) binary_expr -> . binary_expr MINUS binary_expr
    (31) binary_expr -> . binary_expr TIMES binary_expr
    (32) binary_expr -> . binary_expr DIVIDE binary_expr
    (33) binary_expr -> . binary_expr OU binary_expr
    (34) binary_expr -> . binary_expr AWLA_LOGICAL binary_expr
    (35) binary_expr -> . binary_expr LT binary_expr
    (36) binary_expr -> . binary_expr LE binary_expr
    (37) binary_expr -> . binary_expr GT binary_expr
    (38) binary_expr -> . binary_expr GE binary_expr
    (39) binary_expr -> . binary_expr EQ binary_expr
    (40) binary_expr -> . binary_expr NE binary_expr
    (41) binary_expr -> . MINUS binary_expr
    (42) binary_expr -> . MACHI binary_expr
    (43) binary_expr -> . LPAREN expression RPAREN
    (44) binary_expr -> . NUMBER
    (45) binary_expr -> . STRING
    (46) binary_expr -> . BOOL
    (47) binary_expr -> . NULL
    (48) binary_expr -> . ID
    (49) binary_expr -> . func_call
    (50) func_call -> . ID LPAREN arg_list RPAREN

    SEMI            reduce using rule 64 (empty -> .)
    ID              shift and go to state 8
    MINUS           shift and go to state 29
    MACHI           shift and go to state 30
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOL            shift and go to state 33
    NULL            shift and go to state 34

    opt_expr                       shift and go to state 45
    expression                     shift and go to state 46
    empty                          shift and go to state 47
    assignment                     shift and go to state 27
    binary_expr                    shift and go to state 28
    func_call                      shift and go to state 35

state 24

    (61) break_stmt -> HRASS . SEMI

    SEMI            shift and go to state 48


state 25

    (62) continue_stmt -> KML . SEMI

    SEMI            shift and go to state 49


state 26

    (11) compound -> LBRACE . stmt_list RBRACE
    (12) stmt_list -> . stmt_list statement
    (13) stmt_list -> . empty
    (64) empty -> .
